# roarm-m3-sim-to-real-pick-place

./: .gitignore  LICENSE  README.md  social_media_posts.txt
report/: project-report.docx
roarm_p/: CMakeLists.txt  package.xml
roarm_p/config/: path_plan.json
roarm_p/launch/: auto_pick.launch.py
roarm_p/notebooks/: workspace-simulation-monte-carlo.ipynb
roarm_p/scripts/: visualize_path.py
roarm_p/src/: simple_pick_place.cpp
