<?xml version="1.0"?>
<package format="3">
  <name>roarm_p</name>
  <version>1.0.0</version>
  <description>ROS2/MoveIt pick-and-place package for RoArm-M3 Pro sim-to-real experiments.</description>
  <maintainer email="mahdisf@users.noreply.github.com">mahdisf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
